force-app/main/default/objects/Quote_Line__c/Quote_Line__c.object-meta.xml
<CustomObject>
    <label>Quote Line</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Line Item Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Line</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>