force-app/main/default/objects/Quote_Line__c/fields/Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Name__c</fullName>
    <label>Quote Name</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Quote Line</relationshipLabel>
    <relationshipName>Quote_Line</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>