force-app/main/default/objects/Quote_Line__c/fields/ServiceDate__c.field-meta.xml
<CustomField>
    <fullName>ServiceDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date</label>
    <type>Date</type>
</CustomField>